feat: 获取人事记录最新同步时间
