# server/router/attendant/attendant.go
@@ -9,10 +9,11 @@ type AttendantRouter struct {
 
 }
 
-func (s *AttendantRouter) InitAutoPositionRouter(Router *gin.RouterGroup) {
+func (s *AttendantRouter) InitAttendantRouter(Router *gin.RouterGroup) {
 	PositionRouterWithoutRecord := Router.Group("attendant")
 	var api = v1.ApiGroupApp.SystemApiGroup.BaseApi
 	{
 		PositionRouterWithoutRecord.POST("getUserAttendant", api.GetUserAttendant)   // 获取上下班时间
+		PositionRouterWithoutRecord.GET("getUserAttendantLastSyncTime", api.GetUserAttendantLastSyncTime)   // 获取上下班时间
 	}
 }
